Fix mobile nav menu spacing

--- a/src/components/NavMenu/NavMenu.css
+++ b/src/components/NavMenu/NavMenu.css
@@ -1,7 +1,7 @@
 .nav-menu {
   position: fixed;
   width: 100%;
-  width: 100vw;
+  /* width: 100vw; */
   height: 100vh;
   height: 100dvh;
   overflow-y: auto;
@@ -20,6 +20,7 @@
   flex-grow: 1;
   padding: 30px 5%; /* fallback */
   padding: min(max(30px, 10%), 50px) 5%;
+  padding: min(max(30px, 10%), 50px) 0;
   display: flex;
   flex-direction: column;
   justify-content: center;
@@ -39,15 +40,21 @@
   font-weight: 600;
   font-weight: 300;
   font-size: 3.5rem;
-  font-size: max(min(20vw, 13rem), 3.5rem);
+  font-size: max(min(15vw, 13rem), 3.5rem);
   letter-spacing: -0.15rem;
   word-spacing: 0.2rem;
-  margin: -1.25rem 0;
+  margin: -0.075em 0;
   line-height: 1;
   text-transform: uppercase;
   text-align: center;
   transition: color 0.5s ease;
   cursor: pointer;
+}
+
+@media screen and (min-width: 800px) {
+  .nav-menu__link {
+    margin: -0.09em 0;
+  }
 }
 
 .nav-menu__link:hover {
